Fixed news/catalogue alignment issue
**Wishlist: make the title align with the bottom

--- a/src/main/webapp/WEB-INF/resources/css/style.css
+++ b/src/main/webapp/WEB-INF/resources/css/style.css
@@ -63,6 +63,10 @@ p {
     color: dimgrey;
 }
 
+.col-lg-4 .ps-feature-info-header {
+    height: 65px;
+}
+
 
 /*---------------- HTML WRAPPERS ----------------*/
 
@@ -120,7 +124,9 @@ p {
     right: 0;
 }
 
+
 /*liked button for articles*/
+
 .liked {
     background-color: var(--dogwood-color);
     color: var(--baby-powder-color);
@@ -130,6 +136,7 @@ p {
     background-color: var(--space-cadet-color);
     color: var(--baby-powder-color);
 }
+
 
 /*---------------- PADDING ----------------*/
 
@@ -325,11 +332,13 @@ hr {
     }
 }
 
+
 /*---------------- Z-INDEX ----------------*/
-.pushToFront{
+
+.pushToFront {
     z-index: 10000;
 }
 
-.pushToBack{
+.pushToBack {
     z-index: -1;
 }
